# dhg-generator

./: README.md  citation.cff  pyproject.toml  tutorial.ipynb
src/dhg/: __init__.py  generator.py
tutorial/: tutorial.ipynb
